--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,17 +51,17 @@ option(USE_V4_ALTIVEC "Enable V4 Altivec" OFF)
 
 option(USE_V4_PORTABLE "Enable V4 Portable" OFF)
 
-option(USE_V4_SSE "Enable V4 SSE" OFF)
+option(USE_V4_SSE "Enable V4 SSE" ON)
 
-option(USE_V4_AVX "Enable V4 AVX" OFF)
+option(USE_V4_AVX "Enable V4 AVX" ON)
 
-option(USE_V4_AVX2 "Enable V4 AVX2" OFF)
+option(USE_V4_AVX2 "Enable V4 AVX2" ON)
 
-option(USE_V8_PORTABLE "Enable V8 Portable" OFF)
+option(USE_V8_PORTABLE "Enable V8 Portable" ON)
 
-option(USE_V8_AVX "Enable V8 AVX" OFF)
+option(USE_V8_AVX "Enable V8 AVX" ON)
 
-option(USE_V8_AVX2 "Enable V8 AVX2" OFF)
+option(USE_V8_AVX2 "Enable V8 AVX2" ON)
 
 option(USE_V16_PORTABLE "Enable V16 Portable" OFF)
 
@@ -241,7 +241,7 @@ endif(USE_V16_PORTABLE)
 
 if(USE_V16_AVX512)
   add_definitions(-DUSE_V16_AVX512)
-  set(VPIC_CXX_FLAGS "${VPIC_CXX_FLAGS} -DUSE_V16_AVX512")
+  set(VPIC_CXX_FLAGS "${VPIC_CXX_FLAGS} -DUSE_V16_AVX512 -mavx")
   set(USE_V16 True)
 endif(USE_V16_AVX512)
 
